--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header>
             <div class="headerContainer">
                 <div id="logo">
-                    <a href="/"><img src="images/Reservia.svg" alt="logo Reservia"></a>
+                    <a href="#"><img src="images/Reservia.svg" alt="logo Reservia"></a>
                 </div>
                 <nav class="headerMenu">
                     <ul>
@@ -74,7 +74,7 @@
                         <div id="accomodations">
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-auberge-de-la-cannebiere.jpg" alt="">
                                     </div>
@@ -95,7 +95,7 @@
                             </div>
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-hotel-du-port.jpg" alt="">
                                     </div>
@@ -115,7 +115,7 @@
                             </div>
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-hôtel-les-mouettes.jpg" alt="">
                                     </div>
@@ -138,7 +138,7 @@
 
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-hotel-de-la-mer.jpg" alt="">
                                     </div>
@@ -160,7 +160,7 @@
 
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-hotel-le-panier.jpg" alt="">
                                     </div>
@@ -181,7 +181,7 @@
                             </div>
 
                             <div class="card">
-                                <a href="">
+                                <a href="#">
                                     <div class="cardImg">
                                         <img src="images/logements/reservia-logement-marseille-hotel-chez-amina.jpg" alt="">
                                     </div>
@@ -226,7 +226,7 @@
                     <div class="popular">
 
                         <div class="card">
-                            <a href="" class="cardContent">
+                            <a href="#" class="cardContent">
                                 <div class="cardImg">
                                     <img src="images/logements/small/reservia-logement-marseille-hotel-le-soleil-du-matin.jpg" alt="">
                                 </div>
@@ -251,7 +251,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="" class="cardContent">
+                            <a href="#" class="cardContent">
                                 <div class="cardImg">
                                     <img src="images/logements/small/reservia-logement-marseille-au-coeur-de-leau-chambre-dhotes.jpg" alt="">
                                 </div>
@@ -276,7 +276,7 @@
                         </div>
 
                         <div class="card">
-                            <a href="" class="cardContent">
+                            <a href="#" class="cardContent">
                                 <div class="cardImg">
                                     <img src="images/logements/small/reservia-logement-marseille-hotel-tout-bleu-tout-blanc.jpg" alt="">
                                 </div>
@@ -313,7 +313,7 @@
 
                 <div class="activity">
                     <div class="card">
-                        <a href="">
+                        <a href="#">
                             <div class="cardImg">
                                 <img src="images/activities/reservia-activities-marseille-port.jpg" alt="">
                             </div>
@@ -328,7 +328,7 @@
                 <div class="activity">
                     <div class="activityContent">
                         <div class="card card2">
-                            <a href="">
+                            <a href="#">
                                 <div class="cardImg">
                                     <img src="images/activities/reservia-activities-marseille-pomegues.jpg" alt="">
                                 </div>
@@ -342,7 +342,7 @@
     
                     <div class="activityContent">
                         <div class="card card3">
-                            <a href="">
+                            <a href="#">
                                 <div class="cardImg">
                                     <img src="images/activities/reservia-activities-marseille-frioul.jpg" alt="">
                                 </div>
@@ -358,7 +358,7 @@
 
                 <div class="activity">
                     <div class="card">
-                        <a href="">
+                        <a href="#">
                             <div class="cardImg">
                                 <img src="images/activities/reservia-activities-marseille-calanques.jpg" alt="">
                             </div>
@@ -373,7 +373,7 @@
                 <div class="activity">
                     <div class="activityContent">
                         <div class="card card5">
-                            <a href="">
+                            <a href="#">
                                 <div class="cardImg">
                                     <img src="images/activities/reservia-activities-marseille-notre-dame-de-la-garde.jpg" alt="">
                                 </div>
@@ -387,7 +387,7 @@
     
                     <div class="activityContent">
                         <div class="card card6">
-                            <a href="">
+                            <a href="#">
                                 <div class="cardImg">
                                     <img src="images/activities/reservia-activities-marseille-longchamps.jpg" alt="">
                                 </div>
@@ -409,25 +409,25 @@
             <nav class="footerMenu">
                 <div class="footerMenuContent">
                     <ul>
-                        <li class="footerMenuTitle"><a href="">A propos</a></li>
-                        <li><a href=""> Fonctionnement du site </a></li>
-                        <li><a href="">Conditions générales de vente</a></li>
-                        <li><a href="">Données et confidentialité</a></li>
+                        <li class="footerMenuTitle"><a href="#">A propos</a></li>
+                        <li><a href="#"> Fonctionnement du site </a></li>
+                        <li><a href="#">Conditions générales de vente</a></li>
+                        <li><a href="#">Données et confidentialité</a></li>
                     </ul>
                 </div>
                 <div class="footerMenuContent">
                 <ul>
-                    <li class="footerMenuTitle"><a href="">Nos hébergements</a></li>
-                    <li><a href="">Charte qualité</a></li>
-                    <li><a href="">Soumettre votre hôtel</a></li>
+                    <li class="footerMenuTitle"><a href="#">Nos hébergements</a></li>
+                    <li><a href="#">Charte qualité</a></li>
+                    <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
                 </div>
 
                 <div class="footerMenuContent">
                 <ul>
-                    <li class="footerMenuTitle"><a href="">Assistance</a></li>
-                    <li><a href="">Centre d'aide</a></li>
-                    <li><a href="">Nous contacter</a></li>
+                    <li class="footerMenuTitle"><a href="#">Assistance</a></li>
+                    <li><a href="#">Centre d'aide</a></li>
+                    <li><a href="#">Nous contacter</a></li>
                 </ul>
                 </div>
                 <div class="footerMenuContent">
