--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             </section>
 
-            <section class="filters">
+            <div class="filters">
                <div class="filterTitle"><span>Filtres</span></div>
                 <ul>
                     <li><button class="filterBtn"> <i class="fas fa-money-bill-wave"> </i>  <span>Économique</span></button></li>
@@ -57,7 +57,7 @@
                     <li><button class="filterBtn"> <i class="fas fa-heart"> </i> <span>Romantique</span></button></li>
                     <li><button class="filterBtn"> <i class="fas fa-dog"> </i> <span>Animaux autorisés</span></button></li>
                 </ul>
-            </section>
+            </div>
             
             <div class="info">
                 <i class="fas fa-info"></i>  <p>Plus de 500 logements sont disponibles dans cette ville</p> 
