--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <nav class="headerMenu">
                     <ul>
-                        <li class="btn-1"><a href="#accomodations"> Hébergements</a></li>
+                        <li><a href="#accomodations"> Hébergements</a></li>
                         <li><a href="#activities"> Activités </a></li>
                     </ul>
                 </nav>
