--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="text">
             <h2>Mes projets OpenClassrooms</h2>
             <ul>
-                <li><a href="#"><span>Reservia</span></a><br>Page web reservation hotel <br> HTML / CSS</li>
+                <li><a href="https://narjissek.github.io/reservia/"><span>Reservia</span></a><br>Page web reservation hotel <br> HTML / CSS</li>
                 <li><a href="#"><span>OhmyFood</span></a><br>Page web reservation hotel <br> HTML / CSS</li>
             </ul>
          </div>
