--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="text">
             <h2>Mes projets OpenClassrooms</h2>
             <ul>
-                <li><a href="https://narjissek.github.io/reservia/"><span>Reservia</span></a><br>Page web reservation hotel <br> HTML / CSS</li>
-                <li><a href="#"><span>OhmyFood</span></a><br>Page web reservation hotel <br> HTML / CSS</li>
+                <li><a href="/reservia/index.html" target="_blank"><span>Reservia</span></a><br>Page web reservation hotel à Marseille <br> > HTML / CSS</li>
+                <li><a href="/ohmyfood/index.html" target="_blank">><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> >  HTML / CSS / SASS</li>
             </ul>
          </div>
 
