--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Mes projets OpenClassrooms</h2>
             <ul>
                 <li><a href="/reservia/index.html" target="_blank"><span>Reservia</span></a><br>Page web reservation hotel à Marseille <br> HTML / CSS</li>
-                <li><a href="/NarjisseKabbara_#3_26052021/ohmyfood/index.html" target="_blank"><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> HTML / CSS / SASS</li>
+                <li><a href="/NarjisseKabbara_#3_26052021/index.html" target="_blank"><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> HTML / CSS / SASS</li>
             </ul>
          </div>
 
