--- a/NarjisseKabbara_3_26052021/index.html
+++ b/NarjisseKabbara_3_26052021/index.html
@@ -34,8 +34,21 @@
                     <div class="howtoNumber">1</div>
                     <div class="howtoText">
                         <i></i> <span>Choisissez un restaurant</span> 
-                        </div>
-                        
+                        </div>  
+                </div>
+
+                <div class="howtoCard">
+                    <div class="howtoNumber">1</div>
+                    <div class="howtoText">
+                        <i></i> <span>Composez votre menu</span> 
+                        </div>  
+                </div>
+
+                <div class="howtoCard">
+                    <div class="howtoNumber">1</div>
+                    <div class="howtoText">
+                        <i></i> <span>Dégustez au restaurant</span> 
+                        </div>  
                 </div>
 
             </div>
