--- a/NarjisseKabbara_3_26052021/menus/alafrancaise.html
+++ b/NarjisseKabbara_3_26052021/menus/alafrancaise.html
@@ -21,27 +21,15 @@
     <div class="container">
 
         <section class="hero">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
         </section>
 
         <section class="menu">
             <div class="menuTitle">
-                <h2>La palette du goût</h2>
+                <h2>A la Française</h2>
                 <button class="menuLike"><i class="far fa-heart"></i> <i class="fas fa-heart"></i></button> 
             </div>    
         </section>
-
-           <!-- <div id="menuContainer">
-                    <div class="accordion">
-                        <label for="tm" class="accordionitem">
-                            <h3>Entrées</h3>
-                        </label>
-                        <input type="checkbox" id="tm"/>
-                        <div class="hiddentext" style="height: 40px; width: 40px; background-color: aquamarine;"></div>
-                        <p class="hiddentext">He lay, slightly domed and divided by arches into stiff sections.</p>
-                    </div>
-                </div> -->
-
         <section class="menuContent">
 
             <h3>Entrées</h3>
@@ -49,8 +37,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Fricassé d'escargot</span> 
-                            <p>Au piment d'espelette</p>    
+                            <span>Tartare de poulpe acidulé</span> 
+                            <p>Aux zestes d'orange</p>    
                         </div>
                         <div class="price">
                             <span>25€</span>
