--- a/NarjisseKabbara_3_26052021/menus/lanoteenchantee.html
+++ b/NarjisseKabbara_3_26052021/menus/lanoteenchantee.html
@@ -21,27 +21,15 @@
     <div class="container">
 
         <section class="hero">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
         </section>
 
         <section class="menu">
             <div class="menuTitle">
-                <h2>La palette du goût</h2>
+                <h2>La note enchantée</h2>
                 <button class="menuLike"><i class="far fa-heart"></i> <i class="fas fa-heart"></i></button> 
             </div>    
         </section>
-
-           <!-- <div id="menuContainer">
-                    <div class="accordion">
-                        <label for="tm" class="accordionitem">
-                            <h3>Entrées</h3>
-                        </label>
-                        <input type="checkbox" id="tm"/>
-                        <div class="hiddentext" style="height: 40px; width: 40px; background-color: aquamarine;"></div>
-                        <p class="hiddentext">He lay, slightly domed and divided by arches into stiff sections.</p>
-                    </div>
-                </div> -->
-
         <section class="menuContent">
 
             <h3>Entrées</h3>
@@ -49,8 +37,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Fricassé d'escargot</span> 
-                            <p>Au piment d'espelette</p>    
+                            <span>Ravioles de foie gras</span> 
+                            <p>Accompagnés de leur crème à la truffe</p>    
                         </div>
                         <div class="price">
                             <span>25€</span>
@@ -63,8 +51,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Foie gras de canard mi-cuit</span> 
-                            <p>Et ses copeaux de truffe noire</p>    
+                            <span>Caviar osciètre</span> 
+                            <p>Sur blini à la farine de blé noir</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -77,8 +65,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Oeuf au plat</span> 
-                            <p>Assaisonné à la truffe sur lit de caviar</p>    
+                            <span>Homard et espuma de potiron</span> 
+                            <p>Mariné aux zestes d'orange</p>    
                         </div>
                         <div class="price">
                             <span>20€</span>
@@ -89,6 +77,21 @@
                     </div>  
                 </div> 
             </div>
+            <div class="menuCardContainer">      
+                <div class="menuCard">
+                    <div class="dish">
+                        <span>Foie gras de canard cuit entier</span> 
+                        <p>Confiture de figue et pain toasté</p>    
+                    </div>
+                    <div class="price">
+                        <span>35€</span>
+                    </div>
+                    <div class="dishSelected">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>  
+            </div> 
+        </div>
   
 
 
@@ -97,8 +100,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de boeuf aux herbes</span> 
-                            <p>Accompagné de sa ribambelle de légumes</p>    
+                            <span>Noix de coquilles Saint-Jacques</span> 
+                            <p>Sur lit de purée de céleri-rave</p>    
                         </div>
                         <div class="price">
                             <span>40€</span>
@@ -111,8 +114,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Parmentier de queue de boeuf</span> 
-                            <p>À la truffe noire sur sa purée de panais</p>    
+                            <span>Langoustine poêlée</span> 
+                            <p>Purée de patate douce</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -125,8 +128,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de turbot</span> 
-                            <p>aux agrumes</p>    
+                            <span>Mijoté de queue de boeuf</span> 
+                            <p>Et riz sauvage aux zestes de citron</p>    
                         </div>
                         <div class="price">
                             <span>44€</span>
@@ -141,11 +144,11 @@
 
             <h3>Desserts</h3>
             <div class="cardContainer">
-                <div class="menuCardContainer">  
+                <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Paris-Brest</span> 
-                            <p>Revisité</p>    
+                            <span>Macaron noisette et chocolat</span> 
+                            <p>Glace au caramel brun et sel de Guérande</p>    
                         </div>
                         <div class="price">
                             <span>18€</span>
@@ -158,8 +161,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Macaron au chocolat d'exception</span> 
-                            <p>Et glace à la vanille de Madagascar</p>    
+                            <span>Baba au rhum revisité</span> 
+                            <p>Avec son coulis de citron</p>    
                         </div>
                         <div class="price">
                             <span>22€</span>
@@ -169,11 +172,11 @@
                         </div>
                     </div>  
                 </div> 
-                <div class="menuCardContainer">      
+                <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Mousse au chocolat</span> 
-                            <p>Au piment d'Espelette et à la truffe noire</p>    
+                            <span>Tarte au citron meringuée</span> 
+                            <p>Destructurée</p>    
                         </div>
                         <div class="price">
                             <span>23€</span>
