--- a/NarjisseKabbara_3_26052021/menus/ledelicedessens.html
+++ b/NarjisseKabbara_3_26052021/menus/ledelicedessens.html
@@ -21,26 +21,15 @@
     <div class="container">
 
         <section class="hero">
-            <img src="../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+            <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         </section>
 
         <section class="menu">
             <div class="menuTitle">
-                <h2>La palette du goût</h2>
+                <h2>Le délice des sens</h2>
                 <button class="menuLike"><i class="far fa-heart"></i> <i class="fas fa-heart"></i></button> 
             </div>    
         </section>
-
-           <!-- <div id="menuContainer">
-                    <div class="accordion">
-                        <label for="tm" class="accordionitem">
-                            <h3>Entrées</h3>
-                        </label>
-                        <input type="checkbox" id="tm"/>
-                        <div class="hiddentext" style="height: 40px; width: 40px; background-color: aquamarine;"></div>
-                        <p class="hiddentext">He lay, slightly domed and divided by arches into stiff sections.</p>
-                    </div>
-                </div> -->
 
         <section class="menuContent">
 
@@ -49,8 +38,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Fricassé d'escargot</span> 
-                            <p>Au piment d'espelette</p>    
+                            <span>Tartare de thon</span> 
+                            <p>Assaisonné au yuzu</p>    
                         </div>
                         <div class="price">
                             <span>25€</span>
@@ -63,8 +52,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Foie gras de canard mi-cuit</span> 
-                            <p>Et ses copeaux de truffe noire</p>    
+                            <span>Bouchée de homard croustillant </span> 
+                            <p>Et sa farandole de petits légumes</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -77,8 +66,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Oeuf au plat</span> 
-                            <p>Assaisonné à la truffe sur lit de caviar</p>    
+                            <span>Velouté de cèpes</span> 
+                            <p>Aux truffes</p>    
                         </div>
                         <div class="price">
                             <span>20€</span>
@@ -97,8 +86,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de boeuf aux herbes</span> 
-                            <p>Accompagné de sa ribambelle de légumes</p>    
+                            <span>Poulet rôti aux herbes de Provence </span> 
+                            <p>Et sa crème de truffe</p>    
                         </div>
                         <div class="price">
                             <span>40€</span>
@@ -111,8 +100,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Parmentier de queue de boeuf</span> 
-                            <p>À la truffe noire sur sa purée de panais</p>    
+                            <span>Langouste rôtie</span> 
+                            <p>Et ses légumes de saison</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -125,8 +114,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de turbot</span> 
-                            <p>aux agrumes</p>    
+                            <span>Côte de boeuf Angus</span> 
+                            <p>Et sa purée de panais</p>    
                         </div>
                         <div class="price">
                             <span>44€</span>
@@ -144,8 +133,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Paris-Brest</span> 
-                            <p>Revisité</p>    
+                            <span>Farandole de desserts</span> 
+                            <p>Du chef</p>    
                         </div>
                         <div class="price">
                             <span>18€</span>
@@ -158,8 +147,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Macaron au chocolat d'exception</span> 
-                            <p>Et glace à la vanille de Madagascar</p>    
+                            <span>Crème brûlée</span> 
+                            <p>revisitée</p>    
                         </div>
                         <div class="price">
                             <span>22€</span>
@@ -172,8 +161,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Mousse au chocolat</span> 
-                            <p>Au piment d'Espelette et à la truffe noire</p>    
+                            <span>Tiramisu</span> 
+                            <p>A la noisette</p> 
                         </div>
                         <div class="price">
                             <span>23€</span>
