--- a/NarjisseKabbara_3_26052021/menus/alafrancaise.html
+++ b/NarjisseKabbara_3_26052021/menus/alafrancaise.html
@@ -51,8 +51,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Foie gras de canard mi-cuit</span> 
-                            <p>Et ses copeaux de truffe noire</p>    
+                            <span>Velouté de légumes d'antan</span> 
+                            <p>Carotte, panais, topinambour</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -65,8 +65,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Oeuf au plat</span> 
-                            <p>Assaisonné à la truffe sur lit de caviar</p>    
+                            <span>Soupe à l'oignon</span> 
+                            <p>revisitée</p>    
                         </div>
                         <div class="price">
                             <span>20€</span>
@@ -85,8 +85,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de boeuf aux herbes</span> 
-                            <p>Accompagné de sa ribambelle de légumes</p>    
+                            <span>Coquilles Saint-Jacques</span> 
+                            <p>AAccompagnées d'une purée de panais</p>    
                         </div>
                         <div class="price">
                             <span>40€</span>
@@ -99,8 +99,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Parmentier de queue de boeuf</span> 
-                            <p>À la truffe noire sur sa purée de panais</p>    
+                            <span>Magret de canard</span> 
+                            <p>Et parmentier de pommes de terre</p>    
                         </div>
                         <div class="price">
                             <span>35€</span>
@@ -113,8 +113,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Filet de turbot</span> 
-                            <p>aux agrumes</p>    
+                            <span>Pigeonneau d’Ille-et-Vilaine</span> 
+                            <p>Sur son lit de gnocchis aux légumes</p>    
                         </div>
                         <div class="price">
                             <span>44€</span>
@@ -132,8 +132,8 @@
                 <div class="menuCardContainer">  
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Paris-Brest</span> 
-                            <p>Revisité</p>    
+                            <span>Pétales de violettes glacés</span> 
+                            <p>Et purée de noisettes</p>    
                         </div>
                         <div class="price">
                             <span>18€</span>
@@ -146,8 +146,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Macaron au chocolat d'exception</span> 
-                            <p>Et glace à la vanille de Madagascar</p>    
+                            <span>Fondant au chocolat</span> 
+                            <p>Revisité</p>    
                         </div>
                         <div class="price">
                             <span>22€</span>
@@ -160,8 +160,8 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>Mousse au chocolat</span> 
-                            <p>Au piment d'Espelette et à la truffe noire</p>    
+                            <span>MMillefeuille croustillant</span> 
+                            <p>Myrtilles et pâte d’amande</p>    
                         </div>
                         <div class="price">
                             <span>23€</span>
