--- a/NarjisseKabbara_3_26052021/index.html
+++ b/NarjisseKabbara_3_26052021/index.html
@@ -11,7 +11,7 @@
     <title>Oh My Food</title>
 </head>
 <body>
-    <!-- <div class="loader"><div class="chargement"></div></div> -->
+    <div class="loader"><div class="chargement"></div></div>
     
     <header>
         <div class="header"><h1>ohmyfood</h1></div>
