--- a/NarjisseKabbara_3_26052021/menus/alafrancaise.html
+++ b/NarjisseKabbara_3_26052021/menus/alafrancaise.html
@@ -160,7 +160,7 @@
                 <div class="menuCardContainer">      
                     <div class="menuCard">
                         <div class="dish">
-                            <span>MMillefeuille croustillant</span> 
+                            <span>Millefeuille croustillant</span> 
                             <p>Myrtilles et pâte d’amande</p>    
                         </div>
                         <div class="price">
