--- a/NarjisseKabbara_3_26052021/index.html
+++ b/NarjisseKabbara_3_26052021/index.html
@@ -17,10 +17,10 @@
     </header>
     <div class="container">
 
-        <section class="localisationContainer">
+        <div class="localisationContainer">
   
             <div id="localisation"><i class="iconlocalisation fas fa-map-marker-alt"></i><span>Paris, Belleville</span></div>
-        </section>
+        </div>
 
         <section class="exploreContainer">
             <h2>Réservez le menu qui vous convient</h2>
