--- a/NarjisseKabbara_3_26052021/index.html
+++ b/NarjisseKabbara_3_26052021/index.html
@@ -72,7 +72,7 @@
                 
                 <div class="restau">
                     <a href="menus/palettedugout.html" class="restau__img">
-                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Image restaurant">
                         <div class="newtag">Nouveau</div>
                     </a>
                     <a href="menus/palettedugout.html" class="restau__text">
@@ -85,7 +85,7 @@
 
                 <div class="restau">
                     <a href="menus/lanoteenchantee.html" class="restau__img">
-                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Image restaurant">
                         <div class="newtag">Nouveau</div>
                     </a>
                     <a href="menus/lanoteenchantee.html" class="restau__text">
@@ -97,7 +97,7 @@
 
                 <div class="restau">
                     <a href="menus/alafrancaise.html" class="restau__img">
-                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Image restaurant">
                         <!-- <div class="newtag">Nouveau</div> -->
                     </a>
                     <a href="menus/alafrancaise.html" class="restau__text">
@@ -109,7 +109,7 @@
 
                 <div class="restau">
                     <a href="menus/ledelicedessens.html" class="restau__img">
-                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        <img src="../NarjisseKabbara_3_26052021/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Image restaurant">
                         <!-- <div class="newtag">Nouveau</div> -->
                     </a>
                     <a href="menus/ledelicedessens.html" class="restau__text">
