--- a/NarjisseKabbara_3_26052021/menus/alafrancaise.html
+++ b/NarjisseKabbara_3_26052021/menus/alafrancaise.html
@@ -20,9 +20,9 @@
     </header>
     <div class="container">
 
-        <section class="hero">
+        <div class="hero">
             <img src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
-        </section>
+        </div>
 
         <section class="menu">
             <div class="menuTitle">
