--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <ul>
                 <li><a href="https://narjissek.github.io/Reservia/" target="_blank"><span>Reservia</span></a><br>Page web reservation hotel à Marseille <br> HTML / CSS</li>
                 <li><a href="https://narjissek.github.io/NarjisseKabbara_3_26052021/" target="_blank"><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> HTML / CSS / SASS</li>
+                <li><a href="https://narjissek.github.io/NarjisseKabbara_4_22072021/" target="_blank"><span>La Chouett Agence</span></a><br>site web  <br> Optimisation SEO</li>
             </ul>
          </div>
 
