--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div class="headerContainer">
             <div class="headerTitle">
                 <h1> Narjisse Kabbara </h1>   
+                <!-- <p class="presentation">hello ! bienvenue sur ma page !</br>
+                Je suis en formation de developpeur web ! </p> -->
             </div>
         </div>
     </header>
@@ -28,11 +30,11 @@
         </div> -->
 
         <div class="text">
-            <h2>Mes projets OpenClassrooms</h2>
+            <h2>Bienvenue ! Voici mes projets OpenClassrooms : </h2>
             <ul>
                 <li><a href="https://narjissek.github.io/Reservia/" target="_blank"><span>Reservia</span></a><br>Page web reservation hotel à Marseille <br> HTML / CSS</li>
                 <li><a href="https://narjissek.github.io/NarjisseKabbara_3_26052021/" target="_blank"><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> HTML / CSS / SASS</li>
-                <li><a href="https://narjissek.github.io/NarjisseKabbara_4_22072021/" target="_blank"><span>La Chouett Agence</span></a><br>site web  <br> Optimisation SEO</li>
+                <li><a href="https://narjissek.github.io/NarjisseKabbara_4_22072021/" target="_blank"><span>La Chouette Agence</span></a><br>site web  <br> Optimisation SEO & Accessibilité</li>
             </ul>
          </div>
 
