--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         </div> -->
 
         <div class="text">
-            <h2>Bienvenue ! Voici mes projets OpenClassrooms : </h2>
+            <h2>hello ! voici mes projets OpenClassrooms : </h2>
             <ul>
                 <li><a href="https://narjissek.github.io/Reservia/" target="_blank"><span>Reservia</span></a><br>Page web reservation hotel à Marseille <br> HTML / CSS</li>
                 <li><a href="https://narjissek.github.io/NarjisseKabbara_3_26052021/" target="_blank"><span>OhmyFood</span></a><br>page mobile reservation de menus dans les restaurants  <br> HTML / CSS / SASS</li>
                 <li><a href="https://narjissek.github.io/NarjisseKabbara_4_22072021/" target="_blank"><span>La Chouette Agence</span></a><br>site web  <br> Optimisation SEO & Accessibilité</li>
+                <li><a href="https://narjissek.github.io/NarjisseKabbara_5_26082021/" target="_blank"><em>EN COURS</em><span>Orinoco</span></a><br>site web e-commerce <br> Page web e-commerce <br> HTML / CSS - SASS - BOOTSTRAP / JAVASCRIPT - API</li>
+                
             </ul>
          </div>
 
@@ -46,3 +48,5 @@
     </footer>
     </body>
 </html>
+
+
