--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet"> 
         
     <title>Narjisse</title>
+    <link rel="icon" href="/images/favicon_io/favicon-32x32.png" type="image/x-icon">
     </head>
     <body>
     <header>
